[package]
name = "mpf-dev"
version = "0.1.4"
edition = "2021"
authors = ["dyzdyz010"]
description = "MPF Development Environment CLI Tool"
license = "MIT"
repository = "https://github.com/dyzdyz010/mpf-dev"
keywords = ["mpf", "qt", "development", "cli"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "6"
zip = "2"
anyhow = "1"
colored = "2"
indicatif = "0.17"
futures-util = "0.3"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
